# year1mpm

./: .gitignore  build.bat
obuchaika/: menu_functions.cpp  menu_functions.hpp
projects/: CMakeLists.txt
projects/base_theory_p1/: CMakeLists.txt
projects/obuchaika/: main.cpp  menu.hpp  menu_items.cpp  menu_items.hpp
