cmake_minimum_required(VERSION 3.2...3.29.2)
set (CMAKE_CXX_STANDARD 11)
project(programming_year1)

add_subdirectory(bubble_sort)
add_subdirectory(bubble_sort_mf)
add_subdirectory(base_theory_p1)
add_subdirectory(obuchaika)
add_subdirectory(unit_test_example)


set(CMAKE_SUPPRESS_REGENERATION true)